--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Welcome</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav id="nav" class="navbar navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,13 +37,55 @@
         </div>
       </nav>
     <main>
-
-
+        <header id="intro">
+            <div class="container">
+                <h1 class="display-4">James Mallen</h1>
+                <p  class="lead">IT Executive</p>
+                <p class="lead">Admiral Group PLC</p>
+                <p> Hello and welcome to my page! My name is James, I'm 30 and currently based in Port Talbot in South Wales</p>
+            </div>
+        </header>
+        <section id="course" class="container1">
+            <section class="media container">
+                <img src="./Images/admiral.jpg" class="align-self-start mr-3" alt="hello-world">
+                <div class="media-body">
+                    <h3 class="mt-0"> Admiral and _Nology</h3>
+            <p> Our course is a collaboration between Admiral and _nology to take 9 members of staff from the operational areas of the business and begin to upskill us to begin an exciting journey into the world of tech! Our course is a 4 week journey that will take us through the basics of creating a repository on GitHub to creating our own websites using HTML,CSS and JavaScript. We'll also be covering the basic principles of Agile and how we can then best apply these in our new work enviroments.</p>
+            </section> 
+            <section class="media container reverse">
+                <img src="./images/hello-world (1).png" class="align-self-start mr-3" alt="HTML">
+                <div class="media-body">
+                    <h3 class="mt-0">HTML</h3>
+            <p> Our first days were spent learning the fundamentals of HTML, from creating our first words and sentence'Hello World' to basic web pages with multiple sections and variables.</p>
+            </section> 
+            <section class="media container ">
+                <img src="./images/css.jpg" class="align-self-start mr-3" alt="CSS">
+                <div class="media-body">
+                    <h3 class="mt-0">CSS</h3>
+            <p>We then moved onto our second languege CSS, so that we could properly learn how to correctly format our currently black and white pages. We began with simple changes like background and font colours, before moving onto using flex boxes and @media queries(you'll probably notice I've still not quite mastered these!)</p>
+            </section> 
+            <section class="media container reverse">
+                <img src="./images/bootstrap.png" class="align-self-start mr-3" alt="JavaScript">
+                <div class="media-body">
+            <h3 class="mt-0">Bootstrap</h3>
+            <p>Towards the end of our first week we were then introduced to Bootstrap! If you look at the Wikipedia defintion you'll see 'Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development. It contains CSS- and (optionally) JavaScript-based design templates for typography, forms, buttons, navigation, and other interface components.' I think it's fair to say the group summarised it better with 'Why didnt we learn this first!'</p>
+            </section>      
+        </section>
+        <section id="java" class="JavaGame">
+            <h2>JavaScript</h2>
+            <p>Watch This Space!</p>
+        </section>
+        <section id="contact" class="container contactme">
+            <div id="socialmedia">
+                <a href="https://www.facebook.com" target="_blank"><img src="./images/facebook-scalable-graphics-icon-facebook-logo-facebook-logo-png-clip-art.png" alt="facebook"></a>
+                <a href="https://twitter.com/explore" target="_blank"><img src="./images/twitter-logo-high-e1477757975960.jpg" alt="Twitter"></a>
+                <a href="https://www.Instagram.com"target="_blank"><img src="./images/Glyph-Icon-hero.png" alt="Instagram"></a>
+                <a href="https://www.linkedin.com" target="_blank"><img src="./images/og-social-share-image (1).jpg" alt="LinkedIn"></a>
+                <p>&copy;James Mallen 2020</p>
+                <a class="nav-link" href="#top"> Return</a>
+            </div>  
+        </section>
     </main>
-    <footer>
-
-    </footer>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
